# pytikuadapter

./: .env.example  .gitignore  CLAUDE.md  README.md  config.py  core.py  demo.py  generated-requests.http  log.py  logger.py  main.py  model.py  models.py  new.sql  pyproject.toml  routers.py  sql.py  util.py
adapter/: Enncy.py  Like.py  Tikuhai.py  __init__.py  axe.py  enncy.py  everyapi.py  icodef.py  lemon.py  like.py  local.py  siliconflow.py  tikuhai.py  wanneng.py  zero.py  zerror.py  zxseek.py
database/: __init__.py  auth_service.py  cache_service.py  config.py  models.py  utils.py
docs/: CLAUDE.md  DATABASE.md  EMBEDDING.md  ERROR_HANDLING.md  REFACTOR_SUMMARY.md  provider-development.md  readme.md
providers/: __init__.py  enncy.py  everyapi.py  like.py  local.py  manager.py  matcher.py  wanneng.py
services/: __init__.py  auth_service.py  dependencies.py  email_service.py  embedding.py  provider_order.py  rate_limit.py  schemas.py
services/routers/: __init__.py  auth.py  providers.py  search.py  tokens.py
tests/: Answer_match.py
